Wed Aug  4 11:47:06 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:
	  Use technique pioneered in the last checkin to remove the
	  $(DUMMY_VALUE...) hack from _CPPFLAGS definitions.

Wed Aug  4 11:23:04 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:
	  The automake documentation recommends that header files for
	  programs and convienence libraries be listed in _SOURCES and not
	  _HEADERS.  This has been done for programs (as we don't yet have
	  a way to reliably distinguish between convienence libraries from
	  installed libraries).  I've done this with rather ugly template
	  macros to avoid having to do the $(DUMMY_VALUE...) hack.  This
	  results in more readable Makefile.am's.

Wed Aug  4 09:23:03 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator:
        * templates/automake.mpd:
          Changed to set nobase_pkginstall_HEADERS instead of HEADER_FILES,
          INLINE_FILES, and TEMPLATE_FILES in Makefile.<project>.am files.
          Extending this will enable us to control installing headers on a
          per library basis (all we need is some way to control the prefix
          used for _HEADERS).

Mon Aug  2 09:29:31 2004  Steve Huston  <shuston@riverace.com>

	* templates/automake.mpd: For non-installed libraries, generate
	  noinst_LTLIBRARIES instead of lib_LTLIBRARIES.
	  For libraries, assume that "libs" are libtool-created libraries
	  and "lit_libs" are not.

Mon Aug  2 08:04:27 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/bmakecommon.mpt:

          Removed ACE specific portions of the bmake template.  They will
          need to be supplied on the command line using the -value_template
          and -value_project options.

Sun Aug  1 08:31:49 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * templates/automake.mpd:
          Fix typo, use <%dynamicflag%> instead of <%dynamicflags%> within